--- a/lib/src/assets/_custom-variables.scss
+++ b/lib/src/assets/_custom-variables.scss
@@ -48,7 +48,7 @@ $navbar-border: (
 );
 $navbar-brand-width:                200px;
 $navbar-brand-bg:                   $brand-primary;
-$navbar-brand-logo:                 url('../packages/master_layout/src/img/logo.png');
+$navbar-brand-logo:                 url('../img/logo.png');
 $navbar-brand-logo-size:            108px auto;
 $navbar-brand-border: (
     bottom: (
