--- a/lib/assets/style.scss
+++ b/lib/assets/style.scss
@@ -1,63 +1,63 @@
 // Core variables and mixins
 @import "bootstrap-variables";
-@import "bower_components/bootstrap/scss/variables";
+@import "../src/bower_components/bootstrap/scss/variables";
 @import "custom-variables";
-@import "bower_components/bootstrap/scss/mixins";
+@import "../src/bower_components/bootstrap/scss/mixins";
 @import "core/mixins";
 
-// Reset and dependencies
-@import "bower_components/bootstrap/scss/normalize";
-@import "bower_components/bootstrap/scss/print";
 
+// Reset and dependencies
+@import "../src/bower_components/bootstrap/scss/normalize";
+@import "../src/bower_components/bootstrap/scss/print";
 
 // Core CSS
-@import "bower_components/bootstrap/scss/reboot";
-@import "bower_components/bootstrap/scss/type";
-@import "bower_components/bootstrap/scss/images";
-@import "bower_components/bootstrap/scss/code";
-@import "bower_components/bootstrap/scss/grid";
-@import "bower_components/bootstrap/scss/tables";
+@import "../src/bower_components/bootstrap/scss/reboot";
+@import "../src/bower_components/bootstrap/scss/type";
+@import "../src/bower_components/bootstrap/scss/images";
+@import "../src/bower_components/bootstrap/scss/code";
+@import "../src/bower_components/bootstrap/scss/grid";
+@import "../src/bower_components/bootstrap/scss/tables";
 @import "bootstrap_custom/tables";
-@import "bower_components/bootstrap/scss/forms";
-@import "bower_components/bootstrap/scss/buttons";
+@import "../src/bower_components/bootstrap/scss/forms";
+@import "../src/bower_components/bootstrap/scss/buttons";
 @import "bootstrap_custom/buttons";
 
 // Components
-@import "bower_components/bootstrap/scss/animation";
-@import "bower_components/bootstrap/scss/dropdown";
+@import "../src/bower_components/bootstrap/scss/animation";
+@import "../src/bower_components/bootstrap/scss/dropdown";
 @import "bootstrap_custom/dropdown";
-@import "bower_components/bootstrap/scss/button-group";
-@import "bower_components/bootstrap/scss/input-group";
+@import "../src/bower_components/bootstrap/scss/button-group";
+@import "../src/bower_components/bootstrap/scss/input-group";
 @import "bootstrap_custom/input-group";
-@import "bower_components/bootstrap/scss/nav";
+@import "../src/bower_components/bootstrap/scss/nav";
 @import "bootstrap_custom/nav";
-@import "bower_components/bootstrap/scss/navbar";
+@import "../src/bower_components/bootstrap/scss/navbar";
 @import "bootstrap_custom/navbar";
-@import "bower_components/bootstrap/scss/card";
+@import "../src/bower_components/bootstrap/scss/card";
 @import "bootstrap_custom/card";
-@import "bower_components/bootstrap/scss/breadcrumb";
+@import "../src/bower_components/bootstrap/scss/breadcrumb";
 @import "bootstrap_custom/breadcrumb";
-@import "bower_components/bootstrap/scss/pagination";
-@import "bower_components/bootstrap/scss/tags";
+@import "../src/bower_components/bootstrap/scss/pagination";
+@import "../src/bower_components/bootstrap/scss/tags";
 @import "bootstrap_custom/tags";
-@import "bower_components/bootstrap/scss/alert";
-@import "bower_components/bootstrap/scss/progress";
+@import "../src/bower_components/bootstrap/scss/alert";
+@import "../src/bower_components/bootstrap/scss/progress";
 @import "bootstrap_custom/progress";
 
-@import "bower_components/bootstrap/scss/media";
-@import "bower_components/bootstrap/scss/list-group";
-@import "bower_components/bootstrap/scss/responsive-embed";
-@import "bower_components/bootstrap/scss/close";
+@import "../src/bower_components/bootstrap/scss/media";
+@import "../src/bower_components/bootstrap/scss/list-group";
+@import "../src/bower_components/bootstrap/scss/responsive-embed";
+@import "../src/bower_components/bootstrap/scss/close";
 
 
 // Components w/ JavaScript
-@import "bower_components/bootstrap/scss/modal";
-@import "bower_components/bootstrap/scss/tooltip";
-@import "bower_components/bootstrap/scss/popover";
-@import "bower_components/bootstrap/scss/carousel";
+@import "../src/bower_components/bootstrap/scss/modal";
+@import "../src/bower_components/bootstrap/scss/tooltip";
+@import "../src/bower_components/bootstrap/scss/popover";
+@import "../src/bower_components/bootstrap/scss/carousel";
 
 // Utility classes
-@import "bower_components/bootstrap/scss/utilities";
+@import "../src/bower_components/bootstrap/scss/utilities";
 
 // Vendors Styles
 @import "vendors/vendors";
