--- a/lib/assets/core/_others.scss
+++ b/lib/assets/core/_others.scss
@@ -23,11 +23,11 @@ hr.transparent {
 .d-100vh-va-top {
     display: table-cell;
     height: 100vh;
-    vertical-align: middle;
+    vertical-align: top;
 }
 
 .d-100vh-va-bottom {
     display: table-cell;
     height: 100vh;
-    vertical-align: middle;
+    vertical-align: bottom;
 }
