--- a/lib/assets/style.css
+++ b/lib/assets/style.css
@@ -8047,12 +8047,12 @@ hr.transparent {
 .d-100vh-va-top {
   display: table-cell;
   height: 100vh;
-  vertical-align: middle; }
+  vertical-align: top; }
 
 .d-100vh-va-bottom {
   display: table-cell;
   height: 100vh;
-  vertical-align: middle; }
+  vertical-align: bottom; }
 
 .breadcrumb-menu {
   position: absolute;
