fixed top padding, added class for preloader

--- a/lib/assets/_custom.scss
+++ b/lib/assets/_custom.scss
@@ -161,3 +161,14 @@ ul.leaders span + span {
 }
 
 /** /DOTS **/
+
+/** PRELOADER **/
+
+.cm-preloader-cube {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  margin-top: -100px;
+}
+
+/** /PRELOADER **/
