--- a/lib/assets/core/_layout.scss
+++ b/lib/assets/core/_layout.scss
@@ -6,9 +6,8 @@ html.sidebar-opened {
 body {
     position: relative;
     min-height: 100vh;
-    padding: 1.5rem 0 0 0;    
+    padding: 0;
     margin: 0;
-
 
     .bd-title.main {
         padding: 0 !important;
