--- a/lib/assets/style.css
+++ b/lib/assets/style.css
@@ -3583,7 +3583,7 @@ body:not(.top-nav) .sidebar ul.nav li.nav-item .navbar-nav a.nav-link.router-lin
   margin-bottom: 1.5rem; }
 
 .breadcrumb {
-  padding: 0.75rem 1rem;
+  padding: 0 0;
   margin-bottom: 1rem;
   list-style: none;
   background-color: #fff; }
@@ -3608,9 +3608,13 @@ body:not(.top-nav) .sidebar ul.nav li.nav-item .navbar-nav a.nav-link.router-lin
     color: #818a91; }
 
 .breadcrumb {
-  position: relative;
-  margin-bottom: 1.5rem;
+  margin-bottom: 0;
   border-bottom: 1px solid #d1d4d7; }
+
+.breadcrumb::after {
+  content: "";
+  display: inherit;
+  clear: inherit; }
 
 .pagination {
   display: inline-block;
@@ -6031,7 +6035,6 @@ html.sidebar-opened {
 
 body {
   position: relative;
-  min-height: 100vh;
   padding: 0;
   margin: 0; }
   body .bd-title.main {
@@ -8063,28 +8066,6 @@ hr.transparent {
   display: table-cell;
   height: 100vh;
   vertical-align: bottom; }
-
-.breadcrumb-menu {
-  position: absolute;
-  top: 0;
-  right: 1rem; }
-  .breadcrumb-menu::before {
-    display: none; }
-  .breadcrumb-menu .btn, .breadcrumb-menu .well.well-sm.bg-faded .btn-sm, .well.well-sm.bg-faded .breadcrumb-menu .btn-sm, .breadcrumb-menu .well.well-sm.bg-faded .btn-group-sm > .btn, .well.well-sm.bg-faded .breadcrumb-menu .btn-group-sm > .btn {
-    padding-top: 0.75rem;
-    padding-bottom: 0.75rem; }
-  .breadcrumb-menu .btn.btn-secondary, .breadcrumb-menu .well.well-sm.bg-faded .btn-secondary.btn-sm, .well.well-sm.bg-faded .breadcrumb-menu .btn-secondary.btn-sm, .breadcrumb-menu .well.well-sm.bg-faded .btn-group-sm > .btn-secondary.btn, .well.well-sm.bg-faded .breadcrumb-menu .btn-group-sm > .btn-secondary.btn {
-    color: #818a91;
-    border: 0; }
-    .breadcrumb-menu .btn.btn-secondary:hover, .breadcrumb-menu .well.well-sm.bg-faded .btn-secondary.btn-sm:hover, .well.well-sm.bg-faded .breadcrumb-menu .btn-secondary.btn-sm:hover, .breadcrumb-menu .btn.btn-secondary.active, .breadcrumb-menu body:not(.top-nav) .sidebar ul.nav li.nav-item a.btn.btn-secondary.nav-link.router-link-active, body:not(.top-nav) .sidebar ul.nav li.nav-item .breadcrumb-menu a.btn.btn-secondary.nav-link.router-link-active, .breadcrumb-menu body:not(.top-nav) .sidebar ul.nav li.nav-item .well.well-sm.bg-faded a.btn-secondary.nav-link.router-link-active.btn-sm, body:not(.top-nav) .sidebar ul.nav li.nav-item .well.well-sm.bg-faded .breadcrumb-menu a.btn-secondary.nav-link.router-link-active.btn-sm, .breadcrumb-menu .well.well-sm.bg-faded body:not(.top-nav) .sidebar ul.nav li.nav-item a.btn-secondary.nav-link.router-link-active.btn-sm, .well.well-sm.bg-faded body:not(.top-nav) .sidebar ul.nav li.nav-item .breadcrumb-menu a.btn-secondary.nav-link.router-link-active.btn-sm, .breadcrumb-menu .well.well-sm.bg-faded .btn-secondary.active.btn-sm, .well.well-sm.bg-faded .breadcrumb-menu .btn-secondary.active.btn-sm {
-      color: #2a2c36;
-      background: transparent; }
-  .breadcrumb-menu .open .btn.btn-secondary, .breadcrumb-menu .open .well.well-sm.bg-faded .btn-secondary.btn-sm, .well.well-sm.bg-faded .breadcrumb-menu .open .btn-secondary.btn-sm {
-    color: #2a2c36;
-    background: transparent; }
-  .breadcrumb-menu .dropdown-menu {
-    min-width: 180px;
-    line-height: 1.5; }
 
 .img-avatar {
   border-radius: 50em; }
