--- a/lib/assets/_custom-variables.scss
+++ b/lib/assets/_custom-variables.scss
@@ -145,6 +145,9 @@ $breadcrumb-borders: (
   )
 );
 
+$breadcrumb-padding-y:              0;
+$breadcrumb-padding-x:              0;
+
 // Aside
 
 $aside-menu-width:                  250px;
