--- a/lib/assets/bootstrap_custom/_breadcrumb.scss
+++ b/lib/assets/bootstrap_custom/_breadcrumb.scss
@@ -1,6 +1,10 @@
 .breadcrumb {
-    position: relative;
-    margin-bottom: 1.5 * $spacer-y;
-
+    margin-bottom: 0;
     @include borders($breadcrumb-borders);
+}
+
+.breadcrumb::after {
+    content: "";
+    display: inherit;
+    clear: inherit;
 }
