--- a/lib/assets/style.css
+++ b/lib/assets/style.css
@@ -8996,12 +8996,7 @@ ul.leaders span + span {
   background: #fff;
   border: 1px solid #d1d4d7; }
   .cm-contract nav {
-    /*position: absolute !important;*/
-    /*top: 0;
-    left: 0;*/
     width: 240px;
-    /*height: 100%;*/
-    /*border-right: 1px solid $border-color;*/
     padding: 15px; }
     .cm-contract nav .btn-block {
       margin-bottom: 15px; }
@@ -9024,6 +9019,9 @@ ul.leaders span + span {
           float: right;
           margin-top: 16px;
           margin-left: 10px; }
+      @media (max-width: 1199px) {
+        .cm-contract nav ul.nav li.nav-item a.nav-link {
+          font-size: 0.675rem; } }
       .cm-contract nav ul.nav li.nav-item a.nav-link {
         line-height: 40px;
         color: #2a2c36;
