--- a/lib/assets/uikits/cm-contract/_cm-contract.scss
+++ b/lib/assets/uikits/cm-contract/_cm-contract.scss
@@ -4,12 +4,7 @@
     border: 1px solid $border-color;
 
     nav {
-        /*position: absolute !important;*/
-        /*top: 0;
-        left: 0;*/
         width: 240px;
-        /*height: 100%;*/
-        /*border-right: 1px solid $border-color;*/
         padding: 15px;
 
         .btn-block {
@@ -41,6 +36,12 @@
                         float: right;
                         margin-top: 16px;
                         margin-left: 10px;
+                    }
+                }
+
+                @include media-breakpoint-down(lg) {
+                    a.nav-link {
+                        font-size: 0.675rem;
                     }
                 }
 
