--- a/lib/assets/style.css
+++ b/lib/assets/style.css
@@ -532,6 +532,24 @@ mark,
 dl.row > dd + dt {
   clear: left; }
 
+@media (max-width: 1199px) {
+  h1, .h1 {
+    font-size: 1.875rem; }
+
+  h2, .h2 {
+    font-size: 1.5rem; }
+
+  h3, .h3 {
+    font-size: 1.3125rem; }
+
+  h4, .h4 {
+    font-size: 1.125rem; }
+
+  h5, .h5 {
+    font-size: 0.9375rem; }
+
+  h6, .h6 {
+    font-size: 0.75rem; } }
 .img-fluid, .carousel-inner > .carousel-item > img,
 .carousel-inner > .carousel-item > a > img {
   max-width: 100%;
