--- a/lib/assets/uikits/cm-contract/_cm-contract.scss
+++ b/lib/assets/uikits/cm-contract/_cm-contract.scss
@@ -41,7 +41,7 @@
 
                 @include media-breakpoint-down(lg) {
                     a.nav-link {
-                        font-size: 0.675rem;
+                        font-size: 0.5rem;
                     }
                 }
 
@@ -51,6 +51,13 @@
                     border-bottom: 1px solid $border-color;
                 }
             }
+        }
+    }
+
+    @include media-breakpoint-down(lg) {
+        nav {
+            width: 170px;
+            padding: 3px;
         }
     }
 
