--- a/lib/assets/uikits/cm-contract/_cm-contract.scss
+++ b/lib/assets/uikits/cm-contract/_cm-contract.scss
@@ -70,6 +70,12 @@
             border-bottom: 1px solid $border-color;
         }
 
+        @include media-breakpoint-down(lg) {
+            .toolbar {
+                padding: 8px;
+            }
+        }
+
         ul.messages-list {
             list-style: none;
             margin: 15px -15px 0 -15px;
