--- a/lib/assets/style.scss
+++ b/lib/assets/style.scss
@@ -19,9 +19,9 @@
 @import "../src/bower_components/bootstrap/scss/tables";
 @import "bootstrap_custom/tables";
 @import "../src/bower_components/bootstrap/scss/forms";
+@import "bootstrap_custom/forms";
 @import "../src/bower_components/bootstrap/scss/buttons";
 @import "bootstrap_custom/buttons";
-
 
 // Components
 @import "../src/bower_components/bootstrap/scss/animation";
