changed aside menu width

--- a/lib/assets/bootstrap_custom/_forms.scss
+++ b/lib/assets/bootstrap_custom/_forms.scss
@@ -6,8 +6,7 @@
 
 @include media-breakpoint-down(lg) {
   .form-control {
-    padding-top: 0.4rem;
-    padding-bottom: 0.4rem;
+    padding: 0.4rem 0.5rem;
     font-size: 0.625rem;
   }
 }
