--- a/lib/assets/style.css
+++ b/lib/assets/style.css
@@ -1896,8 +1896,7 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
 
 @media (max-width: 1199px) {
   .form-control {
-    padding-top: 0.4rem;
-    padding-bottom: 0.4rem;
+    padding: 0.4rem 0.5rem;
     font-size: 0.625rem; } }
 .btn, .well.well-sm.bg-faded .btn-sm, .well.well-sm.bg-faded .btn-group-sm > .btn {
   display: inline-block;
@@ -6529,6 +6528,9 @@ nav.top-nav {
     .aside-menu .tab-content .tab-pane {
       padding: 0; }
 
+@media (max-width: 1199px) {
+  .aside-menu {
+    width: 190px; } }
 #loading-bar,
 #loading-bar-spinner {
   -webkit-pointer-events: none;
