--- a/lib/assets/style.css
+++ b/lib/assets/style.css
@@ -6160,6 +6160,9 @@ body.sidebar-nav .sidebar {
   left: 0; }
 body.sidebar-nav .main {
   padding-left: 200px; }
+@media (max-width: 1199px) {
+  body.sidebar-nav .main {
+    padding-left: 190px; } }
 body.sidebar-nav .footer {
   left: 200px; }
 
@@ -6170,6 +6173,9 @@ body.top-nav .main {
 
 body.aside-menu-open .main {
   padding-right: 250px; }
+@media (max-width: 1199px) {
+  body.aside-menu-open .main {
+    padding-right: 180px; } }
 body.aside-menu-open .aside-menu {
   right: 0; }
 body.aside-menu-open .footer {
@@ -8192,6 +8198,10 @@ hr.transparent {
     float: right;
     width: 100px; }
 
+@media (max-width: 1199px) {
+  .callout {
+    padding-left: 0.5em;
+    padding-right: 0.5em; } }
 .callout-bordered {
   border: 1px solid #d1d4d7;
   border-left-width: .25rem; }
