changed left menu and logo width

--- a/lib/assets/bootstrap_custom/_navbar.scss
+++ b/lib/assets/bootstrap_custom/_navbar.scss
@@ -55,6 +55,12 @@ header.navbar {
         background-size: $navbar-brand-logo-size;
         @include borders($navbar-brand-border);
     }
+
+    @include media-breakpoint-down(lg) {
+        a.navbar-brand {
+            width: 169px;
+        }
+    }
 }
 
 header.navbar {
