changed sm font-size

--- a/lib/assets/core/_typography.scss
+++ b/lib/assets/core/_typography.scss
@@ -40,3 +40,37 @@ body {
 .font-5xl {
     font-size: 2.5rem !important;
 }
+
+@include media-breakpoint-down(lg) {
+    .font-xs {
+        font-size: .75rem * 0.7 !important;
+    }
+
+    .font-sm {
+        font-size: .85rem * 0.7 !important;
+    }
+
+    .font-lg {
+        font-size: 1rem * 0.7 !important;
+    }
+
+    .font-xl {
+        font-size: 1.25rem * 0.7 !important;
+    }
+
+    .font-2xl {
+        font-size: 1.5rem * 0.7 !important;
+    }
+
+    .font-3xl {
+        font-size: 1.75rem * 0.7 !important;
+    }
+
+    .font-4xl {
+        font-size: 2rem * 0.7 !important;
+    }
+
+    .font-5xl {
+        font-size: 2.5rem * 0.7 !important;
+    }
+}
