--- a/lib/assets/bootstrap_custom/_input-group.scss
+++ b/lib/assets/bootstrap_custom/_input-group.scss
@@ -1,7 +1,13 @@
-
 .input-group-addon,
 .input-group-btn {
     min-width: 40px;
     white-space: nowrap;
     vertical-align: middle; // Match the inputs
+}
+
+@include media-breakpoint-down(lg) {
+    .input-group-addon {
+        padding-top: 0.3rem;
+        padding-bottom: 0.3rem;
+    }
 }
