--- a/lib/assets/style.css
+++ b/lib/assets/style.css
@@ -2711,7 +2711,8 @@ tbody.collapse.in {
 @media (max-width: 1199px) {
   .input-group-addon {
     padding-top: 0.3rem;
-    padding-top: 0.3rem; } }
+    padding-bottom: 0.3rem;
+    font-size: 0.675rem; } }
 .nav {
   padding-left: 0;
   margin-bottom: 0;
