--- a/lib/assets/style.scss
+++ b/lib/assets/style.scss
@@ -40,6 +40,7 @@
 @import "../src/bower_components/bootstrap/scss/breadcrumb";
 @import "bootstrap_custom/breadcrumb";
 @import "../src/bower_components/bootstrap/scss/pagination";
+@import "bootstrap_custom/pagination";
 @import "../src/bower_components/bootstrap/scss/tags";
 @import "bootstrap_custom/tags";
 @import "../src/bower_components/bootstrap/scss/alert";
