changed contracts line height

--- a/lib/assets/uikits/cm-contract/_cm-contract.scss
+++ b/lib/assets/uikits/cm-contract/_cm-contract.scss
@@ -50,6 +50,12 @@
                     color: $body-color;
                     border-bottom: 1px solid $border-color;
                 }
+
+                @include media-breakpoint-down(lg) {
+                    a.nav-link {
+                        line-height: 35px;
+                    }
+                }
             }
         }
     }
