--- a/lib/assets/style.css
+++ b/lib/assets/style.css
@@ -9128,6 +9128,9 @@ ul.leaders span + span {
         line-height: 40px;
         color: #2a2c36;
         border-bottom: 1px solid #d1d4d7; }
+      @media (max-width: 1199px) {
+        .cm-contract nav ul.nav li.nav-item a.nav-link {
+          line-height: 35px; } }
   @media (max-width: 1199px) {
     .cm-contract nav {
       width: 170px;
