--- a/lib/assets/bootstrap_custom/_tables.scss
+++ b/lib/assets/bootstrap_custom/_tables.scss
@@ -19,8 +19,10 @@
 }
 
 @include media-breakpoint-down(lg) {
-    th,
-    td {
-        padding: 0.4rem;
+    .table {
+        th,
+        td {
+            padding: 0.4rem;
+        }
     }
 }
