changed footer right gutter

--- a/lib/assets/core/_layout.scss
+++ b/lib/assets/core/_layout.scss
@@ -238,7 +238,9 @@ body.aside-menu-open {
     }
 
     @include media-breakpoint-down(lg) {
-        right: 190px;
+        .footer {
+            right: 190px;
+        }
     }
 
     &.aside-menu-off-canvas {
