--- a/lib/assets/bootstrap_custom/_input-group.scss
+++ b/lib/assets/bootstrap_custom/_input-group.scss
@@ -7,8 +7,9 @@
 
 @include media-breakpoint-down(lg) {
     .input-group-addon {
-        padding-top: 0.3rem;
-        padding-bottom: 0.3rem;
+        padding-top: 0;
+        padding-bottom: 0;
+        min-width: 35px;
         font-size: 0.675rem;
     }
 }
