--- a/lib/assets/style.css
+++ b/lib/assets/style.css
@@ -3622,7 +3622,7 @@ body:not(.top-nav) .sidebar ul.nav li.nav-item .navbar-nav a.nav-link.router-lin
   margin-bottom: 1.5rem; }
 
 .breadcrumb {
-  padding: 0 0;
+  padding: 0.75rem 1rem;
   margin-bottom: 1rem;
   list-style: none;
   background-color: #fff; }
@@ -3647,13 +3647,9 @@ body:not(.top-nav) .sidebar ul.nav li.nav-item .navbar-nav a.nav-link.router-lin
     color: #818a91; }
 
 .breadcrumb {
-  margin-bottom: 0;
+  position: relative;
+  margin-bottom: 1.5rem;
   border-bottom: 1px solid #d1d4d7; }
-
-.breadcrumb::after {
-  content: "";
-  display: inherit;
-  clear: inherit; }
 
 .pagination {
   display: inline-block;
