--- a/lib/assets/bootstrap_custom/_navbar.scss
+++ b/lib/assets/bootstrap_custom/_navbar.scss
@@ -63,6 +63,12 @@ header.navbar {
     }
 }
 
+@include media-breakpoint-down(lg) {
+    header.navbar {
+        line-height: 54px;
+    }
+}
+
 header.navbar {
     .navbar-brand {
         margin-right: 0;
