--- a/lib/assets/style.css
+++ b/lib/assets/style.css
@@ -3168,11 +3168,11 @@ header.navbar .navbar-brand {
   margin-right: 0; }
 
 .navbar-toggler, .aside-toggle {
-  padding: 0.75em;
+  padding: 0 .75em;
   line-height: 51px; }
 
 .aside-toggle {
-  padding: 0.75em;
+  padding: 0 .75em;
   line-height: 51px; }
 
 header.navbar .navbar-nav .nav-link {
@@ -3652,10 +3652,12 @@ body:not(.top-nav) .sidebar ul.nav li.nav-item .navbar-nav a.nav-link.router-lin
 .breadcrumb {
   position: relative;
   margin-bottom: 1.5rem;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
   border-bottom: 1px solid #d1d4d7; }
 
+@media (max-width: 1199px) {
+  .breadcrumb {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem; } }
 .pagination {
   display: inline-block;
   padding-left: 0;
